# word-ai

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  mcpb_bootstrap.py  package.json  pyproject.toml  requirements.txt  server.json
codex-skill/: SKILL.md
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md  CHANGELOG_V04.md  CHANGELOG_V05.md  CHANGELOG_V06.md  CHANGELOG_V07.md  CHANGELOG_V071.md  CHANGELOG_V080.md  CHANGELOG_V081.md  CHANGELOG_V083.md  CHANGELOG_V084.md  CHANGELOG_V085.md  CHANGELOG_V086.md  CODEX_TOOL_CATALOG.md  DEVELOPMENT_PLAN.md  DISTRIBUTION.md  DISTRIBUTION.zh-CN.md  GETTING_STARTED.md  GETTING_STARTED.zh-CN.md  QA_REPORT.md  README.md  README.zh-CN.md  REGISTRY_PUBLISHING.md  REGISTRY_PUBLISHING.zh-CN.md  SECURITY.en.md  SECURITY.md  STABILITY_POLICY.md  STRUCTURE_SAFE_V0_4.md  TOOL_CONTRACT.md  VALIDATION_MATRIX.md
examples/: codex-mcp-config.toml  mcp_stdio_smoke_request.jsonl  openai_agents_stdio_example.py  responses_remote_mcp_example.py  sample_contract.docx
office-addin/: manifest.xml  package-lock.json  package.json  tsconfig.json
schemas/: audit.schema.json  document_index.schema.json  patchset.schema.json
scripts/: build_mcpb.py  build_standalone.py  install.ps1  install.sh  install_agent_skills.py  make_sample_docx.py  package_native_assets.py  package_quickstart.py  publish_dotnet.ps1  publish_dotnet.sh  publish_native_backends.py  run_dotnet_regression.py  run_engine_selection_regression.py  run_office_bridge_smoke.py  (+11 more)
(+27 files in other folders)
